# vmcloak

./: pyproject.toml
docs/: conf.py
tests/: test_agent.py  test_swarm.py  test_util.py  test_vms.py  test_zer0m0n.py
vmcloak/: __init__.py  abstract.py  agent.py  conf.py  exceptions.py  install.py  machineconf.py  main.py  misc.py  ostype.py  paths.py  rand.py  repository.py  swarm.py  verify.py  win10.py  win7.py  win81.py  winxp.py
vmcloak/data/: config.py  modified_agent.py
vmcloak/data/bootstrap/windows/: resolution.py
vmcloak/data/db_migration/: env.py
vmcloak/data/db_migration/versions/: add__installed_column.py  add_alembic_version.py  add_mac_columns.py  add_paravirtprovider_column.py
vmcloak/dependencies/: acpishutdown.py  adobepdf.py  carootcert.py  chrome.py  cuteftp.py  disableservices.py  dns.py  dotnet.py  edge.py  extract.py  finalize.py  firefox.py  flash.py  ie10.py  ie11.py  ie9.py  java.py  kb.py  modified.py  office.py  onemon.py  optimizeos.py  pillow.py  ps1logging.py  python.py  removetooltips.py  resolution.py  silverlight.py  sysmon.py  threemonpatch.py  vcredist.py  wallpaper.py  wic.py  win7sp.py  winddk.py  winrar.py
