[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VMCloak"
dynamic = ["version"]
authors = [{ name = "Hatching B.V.", email = "info@hatching.io" }]
description = "Automated Virtual Machine Generation and Cloaking for Cuckoo Sandbox"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "click",
    "jinja2",
    "pefile>=2019.4.18, <2019.5.0",
    "pyyaml>=5.1",
    "sqlalchemy>=1.4, <1.5",
    "alembic>=1.7.4, <1.8",
    "requests>=2.22.0, <3",
    "psutil>=5.4.8, <6"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

dev = [
    "ruff",
    "pyre-check",
    "bandit",
    "safety"
]

[project.scripts]
vmcloak = "vmcloak.main:main"

[tool.hatch.version]
path = "vmcloak/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
    "vmcloak/**",
    "bin/vmcloak-iptables",
    "bin/vmcloak-qemubridge"
]

[project.urls]
Documentation = "https://cuckoo-hatch.cert.ee/static/docs/"
Repository = "https://github.com/cert-ee/vmcloak"

[tool.ruff]
line-length = 88
indent-width = 4
targent-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # one blank line before class docstring
    "D212", # docstring starts at second line
    "ANN101", # missing self type annotation
    "TRY003" # constant exception messages
]

preview = true
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["vmcloak"]
force-single-line = true

[tool.pyre]
strict = true
ignore_infer = []
python_version = 3.13
exclude = [
    ".venv/",
    "tests/"
]

[tool.bandit]
skips = ["B101"]

[dependency-groups]
dev = [
    "radon>=6.0.1",
]
